Bug 485767 - No online updates of prices possible
Summary: No online updates of prices possible
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.3
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-18 23:50 UTC by Ralf Habacker
Modified: 2024-05-01 08:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
test case (7.96 KB, text/xml)
2024-04-18 23:50 UTC, Ralf Habacker
Details
Screenshot showing broken online quote update (45.12 KB, image/png)
2024-04-18 23:50 UTC, Ralf Habacker
Details
Screenshot from previous kmymoney major version (124.13 KB, image/png)
2024-04-18 23:52 UTC, Ralf Habacker
Details
Screenshot showing broken online quote update from actual master branch (97.94 KB, image/png)
2024-04-19 08:36 UTC, Ralf Habacker
Details
Screenshot showing broken online quote update from 5.1 branch (97.88 KB, image/png)
2024-04-19 08:37 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2024-04-18 23:50:12 UTC
Created attachment 168655 [details]
test case

STEPS TO REPRODUCE
1. download https://cdn.kde.org/ci-builds/office/kmymoney/master/windows/kmymoney-master-3201-windows-cl-msvc2019-x86_64.7z
2. unpack and start bin\kmymoney.exe
3. load appended file
4. select menu entry extra->prices
5. select the present entry and press "online course notes"


OBSERVED RESULT
The price could not be updated from an online quote source 


EXPECTED RESULT
It should be possible to update prices from an online quote source

SOFTWARE/OS VERSIONS
Windows:  10
KDE Frameworks Version: 5.115.0
Qt Version: 5.15.12
Comment 1 Ralf Habacker 2024-04-18 23:50:59 UTC
Created attachment 168656 [details]
Screenshot showing broken online quote update
Comment 2 Ralf Habacker 2024-04-18 23:52:12 UTC
Created attachment 168657 [details]
Screenshot from previous kmymoney major version

With the previous major version of kmymoney the online quote update works out of the box.
Comment 3 Ralf Habacker 2024-04-19 06:35:45 UTC
The issue is also present on a Linux build from git master branch.
Comment 4 Ralf Habacker 2024-04-19 08:36:17 UTC
Created attachment 168664 [details]
Screenshot showing broken online quote update from actual master branch
Comment 5 Ralf Habacker 2024-04-19 08:37:39 UTC
Created attachment 168665 [details]
Screenshot showing broken online quote update from 5.1 branch

Made sure, that an entry is selected.
Comment 6 Ralf Habacker 2024-04-19 08:43:32 UTC
(In reply to Ralf Habacker from comment #5)
> Created attachment 168665 [details]
> Screenshot showing broken online quote update from actual master branch
> 
> Made sure, that an entry is selected.

Since Craft uses the stable branch (5.1) by default, this screenshot is from 5.1.
Comment 7 Thomas Baumgart 2024-05-01 08:07:35 UTC
Git commit 745db530843ae773e788afd8a91283cc5293fc12 by Thomas Baumgart.
Committed on 01/05/2024 at 08:07.
Pushed by tbaumgart into branch 'master'.

Show online price entries no matter if used or not

Online price entries for update were only shown if they are actually
used by any of the accounts. That lead to the fact that existing price
entries in the price table were not shown for online update if no
account was using them.

This change forces all price entries to be shown for update.
FIXED-IN: 5.2

M  +1    -1    kmymoney/dialogs/kequitypriceupdatedlg.cpp

https://invent.kde.org/office/kmymoney/-/commit/745db530843ae773e788afd8a91283cc5293fc12